# tabelle

./: .gitignore  Cargo.toml  LICENSE  README.md  todo.csv
.github/workflows/: CODEOWNERS  ci.yml  mirror.yml
tabelle/: Cargo.toml
tabelle-core/: Cargo.toml
tabelle-core/src/: cells.rs  csv.rs  lib.rs  units.rs
tabelle-core/src/cells/: cell_content.rs
tabelle-core/src/cells/cell_content/: formula.rs
tabelle-tui/: Cargo.toml
tabelle-tui/src/: commands.rs  dialog.rs  main.rs
tabelle/src/: commands.rs  dialog.rs  main.rs  text_input.rs
