[package]
name = "tabelle-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pyo3 = "0.16.5"
serde = { version = "1.0.143", features = ["derive"] }
umya-spreadsheet = "0.9.2"
unicode-width = "0.1.9"
