[package]
name = "tabelle-tui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = { version = "0.25.0", features = ["serde"] }
pad = "0.1.6"
serde = { version = "1.0.143", features = ["derive"] }
serde_json = "1.0.83"
tabelle-core = { path = "../tabelle-core" }
