[package]
name = "tabelle-tui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = { version = "0.25.0", features = ["serde"] }
serde = { version = "1.0.143", features = ["derive"] }
serde_json = "1.0.83"
strum = { version = "0.24.1", features = ["derive"] }
tabelle-core = { path = "../tabelle-core" }
unicode-truncate = "0.2.0"
unicode-width = "0.1.9"
